--- a/ui/index.html
+++ b/ui/index.html
@@ -9,12 +9,11 @@
         </div>
         <br>
         <div class="center text-big bold">
-<<<<<<< HEAD
+< HEAD
             Hi! My name is Atanu Chatterjee.
 		<h4>This is my first webapp.<br />made some cahnges locally</h4> 
 =======
             Hi! I am Atanu.This is my webapp
->>>>>>> 156ea6f0ee16e95a759286083a5d18dfd39b94a5
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
